# backup-utilities

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: TUI-Textual-重构计划.md  quick-reference.md  technical-notes.md  架构设计.md
src/backup_utilities/: __init__.py  archive.py  cli.py  config.py  crypto.py  discovery.py  layout.py  logging_utils.py  passphrase.py  query.py  recovery.py  runner.py  selectors.py  storage.py  tui.py  units.py
src/backup_utilities/protocols/: __init__.py  base.py  github.py  google_drive.py  registry.py
src/backup_utilities/tui/: add_units.py  app.py  backup_units.py  common.py  dialog.py
src/backup_utilities/ui_textual/: app.py  screens.py  state.py
tests/: test_github_protocol.py  test_logging_utils.py  test_passphrase_keyring.py  test_recovery.py  test_tui_focus_keys.py
